...
        tools:layout="@layout/fragment_organizer_event_page">
        <action
            android:id="@+id/action_organizerEventPageFragment_to_entrantMapFragment"
            app:destination="@id/entrantMapFragment" />
        <action
            android:id="@+id/action_organizerEventPageFragment_to_runDrawFragment"
            app:destination="@id/runDrawFragment"/>
        <action
            android:id="@+id/action_organizerEventPageFragment_to_entrantListFragment"
            app:destination="@id/entrantListFragment" />

        <argument
            android:name="eventId"
...
